--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -115,3 +115,22 @@ p.header1 {
 .field_back_color {
     background-color: #e9e9de;
 }
+.popup{
+    width:100%;
+    min-height:100%;
+    background-color: rgba(0,0,0,0.5);
+    overflow:hidden;
+    position:fixed;
+    top:0px;
+    display: none;
+}
+.popup .popup-content{
+    margin:150px auto 100px auto;
+    width:55%;
+    height: 50%;
+    padding:20px;
+    background-color: #c5c5c5;
+    border-radius:5px;
+    box-shadow: 0px 0px 10px #000;
+    font-size: large;
+}
